Link to 3DS Controller

--- a/skills.html
+++ b/skills.html
@@ -55,7 +55,7 @@
 					<li>Competent understanding of JavaScript (and jQuery) for both client and server (with NodeJS) side</li>
 					<li>Brief experience with PHP</li>
 					<li>SQL databases, and understanding of attacks such as SQL injection</li>
-					<li>Ability to write low-level, raw packet, networking code</li>
+					<li><a href="3ds-controller.html">Ability to write low-level, raw packet, networking code</a></li>
 				</ul>
 				
 				<br>
