--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 				<p>
 					...
 				</p>
+				
+				<iframe style="contributions" src="https://github.com/users/cturt/contributions"></iframe>
 			</div>
 		</div>
 	</body>
