--- a/nes.html
+++ b/nes.html
@@ -45,7 +45,7 @@
 				</p>
 				
 				<div class="center">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/j3YfrCccIl8" frameborder="0" allowfullscreen></iframe>
+					<iframe class="youtube" width="560" height="315" src="https://www.youtube.com/embed/j3YfrCccIl8" frameborder="0" allowfullscreen></iframe>
 				</div>
 			</div>
 		</div>
