--- a/3ds-controller.html
+++ b/3ds-controller.html
@@ -52,7 +52,7 @@
 				</p>
 				
 				<div class="center">
-					<iframe width="420" height="315" src="https://www.youtube.com/embed/unAxDPQT-os" frameborder="0" allowfullscreen></iframe>
+					<iframe class="youtube" width="420" height="315" src="https://www.youtube.com/embed/unAxDPQT-os" frameborder="0" allowfullscreen></iframe>
 				</div>
 				
 				<div class="quote-reference">
