Link to compression

--- a/skills.html
+++ b/skills.html
@@ -68,7 +68,7 @@
 				
 				<h2>Misc</h2>
 				<ul>
-					<li>Understanding of advanced topics including compression, and <a href="exploits.html">exploitation</a></li>
+					<li>Understanding of advanced topics including <a href="compression.html">compression</a>, and <a href="exploits.html">exploitation</a></li>
 					<li>Reverse Engingeering using IDA</li>
 					<li>Git</li>
 					<li>Makefiles</li>
