--- a/3ds-controller.html
+++ b/3ds-controller.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="css/core.css" />
-		<title>CTurt</title>
+		<title>3DS Controller</title>
 	</head>
 	
 	<body>
