Fix devkitARM reference

--- a/ds-cfw.html
+++ b/ds-cfw.html
@@ -41,7 +41,7 @@
 				</p>
 				
 				<p>
-					After updating some horridly outdated code (<a href="https://home.comcast.net/~olimar/DS/">Olimar's</a> hbfirmware) to be compatible with the latest devkitPro components, I could now make my own CFWs! I won't be sharing this code, since it's not well polished, and I don't want to be responsible for any damage to any consoles.
+					After updating some horridly outdated code (<a href="https://home.comcast.net/~olimar/DS/">Olimar's</a> hbfirmware) to be compatible with the latest version of devkitARM, I could now make my own CFWs! I won't be sharing this code, since it's not well polished, and I don't want to be responsible for any damage to any consoles.
 				</p>
 				
 				<div class="center">
