--- a/dsgmLib.html
+++ b/dsgmLib.html
@@ -45,7 +45,21 @@
 					<a href="https://github.com/DSGameMaker/dsgmLib/blob/master/README.md">- dsgmLib README.md</a>
 				</div>
 				
+				<br>
+				<br>
 				
+				<h2>Features:</h2>
+				<ul>
+					<li>High level object oriented programming</li>
+					<li>Wireless DS to DS multiplayer (NiFi)</li>
+					<li>Saving and loading</li>
+					<li>3D (support for MD2 models with animation and texturing, as well as abstractions for complex 3D maths such as quaternions)</li>
+					<li>Drawable backgrounds</li>
+					<li>Rotatable and scalable backgrounds</li>
+					<li>Custom fonts</li>
+					<li>Scaling and rotating of sprites</li>
+					<li>Sound effects, and music</li>
+				</ul>
 			</div>
 		</div>
 	</body>
