--- a/dsgmLib.html
+++ b/dsgmLib.html
@@ -33,7 +33,7 @@
 				<hr>
 				
 				<p>
-					Originally designed to be the game engine used in a complete remake of <a href="http://dsgamemaker.com">DS Game Maker</a>, however, dsgmLib still works great as a standalone library for making DS games and applications.
+					dsgmLib was originally designed to be the game engine used in a complete remake of <a href="http://dsgamemaker.com">DS Game Maker</a>, however, it still works great as a standalone library for making DS games and applications.
 				</p>
 				
 				<div class="quote">
