--- a/cinoop.html
+++ b/cinoop.html
@@ -570,7 +570,7 @@ struct registers {
 				</p>
 				
 				<p>
-					For example, the DS' libfat supports file reading using the standard C procedures (<code>fopen</code> et al.), however the 3DS' ctrulib has its own special way to read files (<code>FSUSER_OpenFileDirectly</a> et al.).
+					For example, the DS' libfat supports file reading using the standard C procedures (<code>fopen</code> et al.), however the 3DS' ctrulib has its own special way to read files (<code>FSUSER_OpenFileDirectly</code> et al.).
 				</p>
 				
 				<p>
