--- a/dsgmLib.html
+++ b/dsgmLib.html
@@ -77,7 +77,7 @@
 					The source code for all examples can be found in <a href="https://github.com/DSGameMaker/dsgmLib/">the repository</a>.
 				</p>
 				
-				<div style="text-align: center;">
+				<div class="center">
 					<img src="images/dsgmLib/galaxy.png" />
 					<img src="images/dsgmLib/kart.png" />
 					<img src="images/dsgmLib/quake.png" />
