--- a/ds.html
+++ b/ds.html
@@ -39,7 +39,7 @@
 				<ul>
 					<li><a href="dsgmLib.html">dsgmLib</a></li>
 					<li><a href="ds-cfw.html">DS Custom Firmware</a></li>
-					<li>Various DS exploits on the <a href="DS-exploit-finding.html">exploits page</a></li>
+					<li>Various DS exploits on the <a href="exploits.html">exploits page</a></li>
 					<li><a href="DS-exploit-finding.html">DS exploit finding tutorial</a></li>
 				</ul>
 			</div>
