--- a/ds.html
+++ b/ds.html
@@ -51,7 +51,7 @@
 				</p>
 				
 				<p>
-					Regardless, my first 3DS application, <a href="3ds-controller">3DS Controller</a> works well, and is faily popular.
+					Regardless, my first 3DS application, <a href="3ds-controller.html">3DS Controller</a> works well, and is faily popular.
 				</p>
 			</div>
 		</div>
