Link to exceptions

--- a/articles.html
+++ b/articles.html
@@ -35,6 +35,7 @@
 				<ul>
 					<li><a href="exploits.html">Exploits</a></li>
 					<li><a href="compression.html">Compression</a></li>
+					<li><a href="exceptions.html">Implementing exceptions in C</a></li>
 					<li><a href="nes.html">Making an NES game</a></li>
 				</ul>
 			</div>
