Link to emulator page

--- a/articles.html
+++ b/articles.html
@@ -33,6 +33,7 @@
 				<hr>
 				
 				<ul>
+					<li><a href="cinoop.html">Writing a Game Boy emulator</a></li>
 					<li><a href="exploits.html">Exploits</a></li>
 					<li><a href="compression.html">Compression</a></li>
 					<li><a href="exceptions.html">Implementing exceptions in C</a></li>
