--- a/skills.html
+++ b/skills.html
@@ -70,7 +70,7 @@
 				
 				<h2>Misc</h2>
 				<ul>
-					<li>Understanding of advanced topics including <a href="compression.html">compression</a>, and <a href="exploits.html">exploitation</a></li>
+					<li>Understanding of advanced topics including <a href="cinoop.html">emulation</a>, <a href="compression.html">compression</a>, and <a href="exploits.html">exploitation</a></li>
 					<li>Reverse Engingeering using IDA</li>
 					<li>Git</li>
 					<li>Makefiles</li>
@@ -82,7 +82,6 @@
 				<ul>
 					<li>More RISC assembly languages like MIPS and SPARC</li>
 					<li>A modern, high level language such as RUST or Go</li>
-					<li>Write an emulator from scratch</li>
 				</ul>
 				
 				<br>
