--- a/cinoop.html
+++ b/cinoop.html
@@ -71,7 +71,7 @@
 				
 				<h2>Memory</h2>
 				<p>
-					Different sources can refer to memory regions differently. High RAM is sometimes called Zero Page Memory, Cartridge Data is sometimes just called ROM, and if a document just says RAM, it is usually refering to the Working RAM. Being aware of this, is essential when reading through documents written by different people.
+					Different sources can refer to memory regions differently. High RAM is sometimes called Zero Page Memory, Cartridge Data is sometimes just called ROM, and if a document just says RAM, it is usually refering to the Working RAM. Being aware of this is essential when reading through documents written by different people.
 				</p>
 				
 				<br>
