--- a/skills.html
+++ b/skills.html
@@ -71,7 +71,7 @@
 				<h2>Misc</h2>
 				<ul>
 					<li>Understanding of advanced topics including <a href="cinoop.html">emulation</a>, <a href="compression.html">compression</a>, and <a href="exploits.html">exploitation</a></li>
-					<li>Reverse Engingeering using IDA</li>
+					<li>Reverse Engineering using IDA</li>
 					<li>Git</li>
 					<li>Makefiles</li>
 				</ul>
