--- a/articles.html
+++ b/articles.html
@@ -39,6 +39,10 @@
 					<li><a href="exceptions.html">Implementing exceptions in C</a></li>
 					<li><a href="nes.html">Making an NES game</a></li>
 				</ul>
+				
+				<p>
+					Mostly written using <a href="RMD">RMD</a>.
+				</p>
 			</div>
 		</div>
 	</body>
