--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<h1>CTurt</h1>
 				<hr>
 				
-				<img src="https://avatars0.githubusercontent.com/u/6132330?v=3&s=400" style="height: 260px; float: left; padding-right: 12px;" />
+				<img src="https://avatars0.githubusercontent.com/u/6132330?v=3&s=400" style="width: 230px; height: 230px; float: left; padding-right: 12px;" />
 				
 				<p style="padding-top: 4px;">
 					C programmer interested in <a href="exploits.html">exploits</a> and reverse engineering.
