Mention Cinoop 3DS port

--- a/ds.html
+++ b/ds.html
@@ -53,6 +53,10 @@
 				<p>
 					Regardless, my first 3DS application, <a href="3ds-controller.html">3DS Controller</a> works well, and is faily popular.
 				</p>
+				
+				<p>
+					I've ported my Game Boy emulator, <a href="cinoop.html">Cinoop</a>, to 3DS; however, it doesn't run full speed.
+				</p>
 			</div>
 		</div>
 	</body>
