--- a/skills.html
+++ b/skills.html
@@ -41,8 +41,9 @@
 				
 				<h2>Other languages (in order of preference)</h2>
 				<ul>
-					<li>ARM assembly</li>
+					<li>ARM (and Thumb mode) assembly</li>
 					<li>Visual Basic</li>
+					<li><a href="cinoop.html">Game Boy</a> assembly (Z80A and Intel 8080 hybrid)</li>
 					<li>Objective-C</li>
 					<li>Action Script</li>
 				</ul>
