--- a/skills.html
+++ b/skills.html
@@ -34,7 +34,7 @@
 				
 				<h2>C</h2>
 				<p>
-					Solid understanding of both low level C (EG: bit operations, and inline assembly), and high level, modern C (EG: C11 anonymous structs and unions), as well as understanding of obscure techniques like <a href="exceptions.html">using setjmp to implement exceptions</a>.
+					Solid understanding of both low level C (EG: bit operations, and call conventions), and high level, modern C (EG: C11 anonymous structs and unions), as well as understanding of obscure techniques like <a href="exceptions.html">using setjmp to implement exceptions</a>.
 				</p>
 				
 				<br>
@@ -72,7 +72,7 @@
 				<h2>Misc</h2>
 				<ul>
 					<li>Understanding of advanced topics including <a href="cinoop.html">emulation</a>, <a href="compression.html">compression</a>, and <a href="exploits.html">exploitation</a></li>
-					<li>Reverse Engineering using IDA</li>
+					<li><a href="vertex-net.html">Reverse Engineering using IDA</a></li>
 					<li>Git</li>
 					<li>Makefiles</li>
 				</ul>
