--- a/articles.html
+++ b/articles.html
@@ -38,6 +38,7 @@
 					<li><a href="compression.html">Compression</a></li>
 					<li><a href="exceptions.html">Implementing exceptions in C</a></li>
 					<li><a href="nes.html">Making an NES game</a></li>
+					<li><a href="vertex-net.html">Reverse engineering VertexNet malware</a></li>
 				</ul>
 				
 				<p>
