--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				</div>
 				
 				<p style="padding-top: 4px;">
-					C programmer interested in <a href="exploits.html">exploits</a> and reverse engineering.
+					C programmer interested in exploits and reverse engineering.
 				</p>
 				
 				<p>
