--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 				<h1>CTurt</h1>
 				<hr>
 				
-				<div style="width: 256px; float: left; padding-right: 12px;">
-					<img src="https://avatars0.githubusercontent.com/u/6132330?v=3&s=400" style="width: 230px; height: 230px; margin-bottom: 8px; border-radius: 6px; -moz-border-radius: 6px; -webkit-border-radius: 6px;" />
+				<div style="width: 50%; max-width: 256px; float: left; padding-right: 12px; margin-bottom: 8px;">
+					<img src="https://avatars0.githubusercontent.com/u/6132330?v=3&s=400" style="width: 100%; margin-bottom: 8px; border-radius: 6px; -moz-border-radius: 6px; -webkit-border-radius: 6px;" />
 					
 					<div class="center">
 						<a href="https://github.com/CTurt"><img src="images/GitHub.png" alt="GitHub" style="padding: 4px;" /></a>
