--- a/skills.html
+++ b/skills.html
@@ -64,7 +64,7 @@
 					<li>Competent understanding of JavaScript (and jQuery) for both client and server (with NodeJS) side</li>
 					<li>Experience with SQL databases, and understanding of attacks such as SQL injection</li>
 					<li>Some limited experience with PHP</li>
-					<li><a href="3ds-controller.html">Ability to write low-level, raw packet, networking code</a></li>
+					<li>Ability to write low-level, networking code (see <a href="3ds-controller.html">3DS Controller</a> and <a href="https://github.com/CTurt/HTTP">my basic HTTP server</a>)</li>
 				</ul>
 				
 				<br>
