Vim on my dislike list

--- a/skills.html
+++ b/skills.html
@@ -90,13 +90,14 @@
 				<h2>Skills I intend to learn</h2>
 				<ul>
 					<li>More RISC assembly languages like MIPS and SPARC</li>
-					<li>A modern, high level language such as RUST or Go</li>
+					<li>A modern, high level language such as Rust or Go</li>
 				</ul>
 				
 				<br>
 				
 				<h2>Dislikes (anything needlessly complicated)</h2>
 				<ul>
+					<li>Vi/Vim</li>
 					<li>Regex</li>
 					<li>CISC languages such as x86 assembly</li>
 				</ul>
