--- a/ps4.html
+++ b/ps4.html
@@ -145,7 +145,7 @@ ret</code></pre>
 				
 				<h2>Finding gadgets</h2>
 				<p>
-					Think of ROP as writing a new chapter to a book, using only words that have appeard at the end of sentences in the previous chapters.
+					Think of ROP as writing a new chapter to a book, using only words that have appeared at the end of sentences in the previous chapters.
 				</p>
 				
 				<p>
