--- a/articles.html
+++ b/articles.html
@@ -39,6 +39,7 @@
 					<li><a href="exceptions.html">Implementing exceptions in C</a></li>
 					<li><a href="nes.html">Making an NES game</a></li>
 					<li><a href="vertex-net.html">Reverse engineering VertexNet malware</a></li>
+					<li><a href="ps4.html">Analysis of PS4 security</a></li>
 				</ul>
 				
 				<p>
