--- a/ps4.html
+++ b/ps4.html
@@ -33,7 +33,7 @@
 				<hr>
 				
 				<p>
-					Since there hasn't really been any public announcments regarding PS4 hacking for a long time now, I wanted to explain a bit about how far PS4 hacking has come, and what is preventing further progression.
+					Since there haven't been any major public announcements regarding PS4 hacking for a long time now, I wanted to explain a bit about how far PS4 hacking has come, and what is preventing further progression.
 				</p>
 				
 				<p>
