--- a/ps4.html
+++ b/ps4.html
@@ -397,7 +397,7 @@ chain.add(stack_base + return_va + 0x480);</code></pre>
 					<li><code>rdi</code> - Argument 1</li>
 					<li><code>rsi</code> - Argument 2</li>
 					<li><code>rdx</code> - Argument 3</li>
-					<li><code>rcx</code> - Argument 4</li>
+					<li><code>r10</code> - Argument 4</li>
 					<li><code>r8</code> - Argument 5</li>
 					<li><code>r9</code> - Argument 6</li>
 				</ul>
@@ -437,7 +437,7 @@ chain.add(stack_base + return_va + 0x480);</code></pre>
 					<li><code>rdi</code> - System call number</li>
 					<li><code>rsi</code> - Argument 1</li>
 					<li><code>rdx</code> - Argument 2</li>
-					<li><code>rcx</code> - Argument 3</li>
+					<li><code>r10</code> - Argument 3</li>
 					<li><code>r8</code> - Argument 4</li>
 					<li><code>r9</code> - Argument 5</li>
 				</ul>
