Update cinoop article

--- a/cinoop.html
+++ b/cinoop.html
@@ -49,7 +49,7 @@
 				</p>
 				
 				<p>
-					Cinoop is written in C and is <a href="https://github.com/CTurt/Cinoop">open source</a>. It can be run on Windows, DS, GameCube, 3DS, and Linux based OSes.
+					Cinoop is written in C and is <a href="https://github.com/CTurt/Cinoop">open source</a>. It can be run on Windows, DS, GameCube, 3DS, Linux based OSes, and PSP.
 				</p>
 				
 				<div class="center">
