--- a/cinoop.html
+++ b/cinoop.html
@@ -740,7 +740,7 @@ struct registers {
 				</p>
 				
 				<p>
-					Mac OS X development suffers from the problems of the opporsite end of the spectrum to PS2 development, everything is centralised to Apple, which makes it (in my experience) even harder to develop for than PS2. You have to create an account to download any development tools, and if something doesn't work (which happens a lot), there are no alternatives, you're stuck!
+					Mac OS X development suffers from the problems of the opposite end of the spectrum to PS2 development, everything is centralised to Apple, which makes it (in my experience) even harder to develop for than PS2. You have to create an account to download any development tools, and if something doesn't work (which happens a lot), there are no alternatives, you're stuck!
 				</p>
 				
 				<div class="quote">
