Inlcude WebProcess.self

--- a/ps4.html
+++ b/ps4.html
@@ -314,6 +314,7 @@ chain.add(chain.data);</code></pre>
 				</p>
 				
 				<ul>
+					<li>WebProcess.self</li>
 					<li>libkernel.sprx</li>
 					<li>libSceLibcInternal.sprx</li>
 					<li>libSceSysmodule.sprx</li>
