Update PS4 article

--- a/ps4.html
+++ b/ps4.html
@@ -1202,7 +1202,7 @@ if (error)
 				
 				<h2>FreeBSD 9.0 kernel exploits</h2>
 				<p>
-					It makes little sense trying to look for new kernel vulnerabilities in the <a href="https://github.com/freebsd/freebsd/tree/master/sys/kern">FreeBSD kernel source code</a> because since <a href="https://www.freebsd.org/releases/9.0R/schedule.html">FreeBSD 9.0's release on 12'th January 2012</a>, <a href="https://www.exploit-db.com/platform/?p=freebsd">several kernel exploits have already been found</a>, which the PS4 could potentially be vulnerable to.
+					It makes little sense trying to look for new kernel vulnerabilities in the <a href="https://github.com/freebsd/freebsd/tree/release/9.0.0/sys/kern">FreeBSD 9.0 kernel source code</a> because since its release in 2012, <a href="https://www.exploit-db.com/platform/?p=freebsd">several kernel exploits have already been found</a>, which the PS4 could potentially be vulnerable to.
 				</p>
 				
 				<p>
