General PS4 update

--- a/ps4.html
+++ b/ps4.html
@@ -1264,13 +1264,14 @@ if (error)
 				
 				<h2>Thanks</h2>
 				<ul>
+					<li>flatz</li>
+					<li>SKFU</li>
+					<li>droogie</li>
+					<li>Xerpi</li>
+					<li>Hunger</li>
+					<li>Takezo</li>
 					<li>nas</li>
 					<li>Proxima</li>
-					<li>Takezo</li>
-					<li>Hunger</li>
-					<li>Xerpi</li>
-					<li>droogie</li>
-					<li>SKFU</li>
 				</ul>
 			</div>
 		</div>
