--- a/skills.html
+++ b/skills.html
@@ -46,6 +46,7 @@
 				<h2>Other languages (in order of preference)</h2>
 				<ul>
 					<li>ARM (and Thumb mode) assembly</li>
+					<li>x86_64 assembly</li>
 					<li>Visual Basic</li>
 					<li><a href="cinoop.html">Game Boy</a> assembly (Z80A and Intel 8080 hybrid)</li>
 					<li>Objective-C</li>
@@ -67,7 +68,7 @@
 				
 				<h2>Platforms</h2>
 				<ul>
-					<li>Experience with many platforms including Windows, Linux, FreeBSD, DS, 3DS, GameCube, <a href="nes.html">NES</a>, <a href="cinoop.html">Game Boy</a>, PSP, Arduino, iOS, and Raspberry Pi</li>
+					<li>Experience with many platforms including Windows, Linux, FreeBSD, DS, 3DS, GameCube, <a href="nes.html">NES</a>, <a href="cinoop.html">Game Boy</a>, PSP, PS4, Arduino, iOS, and Raspberry Pi</li>
 					<li>Ability to apply a range of techniques to optimise code for either space or performance on embedded systems</li>
 				</ul>
 				
@@ -95,7 +96,6 @@
 				<ul>
 					<li>Vi/Vim</li>
 					<li>Regex</li>
-					<li>CISC languages such as x86 assembly</li>
 				</ul>
 			</div>
 		</div>
