--- a/articles.html
+++ b/articles.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="css/core.css" />
-		<title>Articles</title>
+		<title>Articles and projects</title>
 	</head>
 	
 	<body>
@@ -43,7 +43,7 @@
 					<li><a href="https://github.com/CTurt/PS4-playground">Collection of WebKit based experiments, including a file browser</a></li>
 					<li><a href="https://github.com/CTurt/PS4-SDK">Open source PS4-SDK</a></li>
 					<li><a href="https://github.com/CTurt/PS4-Pong">Native Pong game</a></li>
-					<li>Have written a WiFi loader for running unsigned code</li>
+					<li><a href="cinoop.html">Native PS4 port of my GameBoy emulator, Cinoop</a></li>
 				</ul>
 				
 				<br>
