Update process explanation

--- a/ps4.html
+++ b/ps4.html
@@ -518,7 +518,7 @@ chain.syscall("getpid", 0, 20);</code></pre>
 				</p>
 				
 				<p>
-					This tells us that the Internet Browser app actually consists of 2 separate processes: the WebKit core, which handles parsing HTML, and executing JavaScript (which we take over), and another one to handle everything else: displaying graphics, receiving controller input, managing history and bookmarks, etc.
+					This tells us that the Internet Browser app actually consists of 2 separate processes: the WebKit core (which we take over), that handles parsing HTML and CSS, decoding images, and executing JavaScript for example, and another one to handle everything else: displaying graphics, receiving controller input, managing history and bookmarks, etc.
 				</p>
 				
 				<p>
