--- a/ps4.html
+++ b/ps4.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="css/core.css" />
-		<title>PS4</title>
+		<title>Analysis of PS4's security and the state of hacking</title>
 	</head>
 	
 	<body>
