--- a/articles.html
+++ b/articles.html
@@ -39,11 +39,12 @@
 				
 				<h2>PS4</h2>
 				<ul>
-					<li><a href="ps4.html">Analysis of the PS4's security</a></li>
+					<li><a href="ps4.html">Analysis of PS4's security and the state of hacking</a></li>
+					<li><a href="ps4-2.html">PS4 security article follow up</a></li>
 					<li><a href="https://github.com/CTurt/PS4-playground">Collection of WebKit based experiments, including a file browser</a></li>
 					<li><a href="https://github.com/CTurt/PS4-SDK">Open source PS4-SDK</a></li>
 					<li><a href="https://github.com/CTurt/PS4-Pong">Native Pong game</a></li>
-					<li><a href="cinoop.html">Native PS4 port of my GameBoy emulator, Cinoop</a></li>
+					<li><a href="cinoop.html">Port of my GameBoy emulator, Cinoop</a></li>
 				</ul>
 				
 				<br>
