--- a/ps4.html
+++ b/ps4.html
@@ -1276,9 +1276,9 @@ if (error)
 					<li>SKFU</li>
 					<li>droogie</li>
 					<li>Xerpi</li>
+					<li>bigboss</li>
 					<li>Hunger</li>
 					<li>Takezo</li>
-					<li>nas</li>
 					<li>Proxima</li>
 				</ul>
 			</div>
