--- a/ps4-2.html
+++ b/ps4-2.html
@@ -71,7 +71,7 @@
 				</p>
 				
 				<p>
-					This can be proven further by dumping all memory which we have access to:
+					We can use the following code to dump all memory which our process has access to:
 				</p>
 				
 				<pre><code>struct memoryRegionInfo info;
