--- a/ps4-3.html
+++ b/ps4-3.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -12,6 +12,10 @@
 		<div class="page">
 			<div class="container">
 				<div class="header">
+					<a href="contact.html" class="header-element">
+						Contact
+					</a>
+					
 					<a href="skills.html" class="header-element">
 						Skills
 					</a>
