--- a/ps4-2.html
+++ b/ps4-2.html
@@ -293,7 +293,7 @@ sceUsbdExit();</code></pre>
 				
 				<h2>More on processes</h2>
 				<p>
-					Our environment has been restricted such that we there are very few ways to interact with other processes meaningfully; I experimented with potential methods of hijacking another process to gain more access but have had little success:
+					Our environment has been restricted such that there are very few ways to interact with other processes meaningfully; I experimented with potential methods of hijacking another process to gain more access but have had little success:
 				</p>
 				
 				<p>
