--- a/ps4-2.html
+++ b/ps4-2.html
@@ -309,7 +309,7 @@ sceUsbdExit();</code></pre>
 				</p>
 				
 				<p>
-					The <code>execve</code> (59) system call is allowed, and there is also a function called <code>sceSystemServiceLoadExec</code> in <code>libSceSystemService.sprx</code>, but we have no way of testing either of these since the filesystem is read only, and we can't mount USB flash drives. It's most likelt that they would only accept encrypted files anyway.
+					The <code>execve</code> (59) system call is allowed, and there is also a function called <code>sceSystemServiceLoadExec</code> in <code>libSceSystemService.sprx</code>, but we have no way of testing either of these since the filesystem is read only and we can't mount USB flash drives. It's most likely that they would only accept encrypted files anyway.
 				</p>
 				
 				<p>
