--- a/ps4-3.html
+++ b/ps4-3.html
@@ -950,7 +950,7 @@ for(offset = mappingAddress; offset < mappingAddress + mappingSize; offset += DU
 				
 				<h2>Summary</h2>
 				<p>
-					I'm going to finish the article at this point since I just wanted to provide a few examples of what can be done with the kernel exploit; there's so much else to be be explored that I don't think I'll ever get round to everything: the registry, save game encryption, system update process, capturing decrypted SSL traffic, etc.
+					I'm going to finish the article at this point since I just wanted to provide a few examples of what can be done with the kernel exploit; there's so much else to be explored that I don't think I'll ever get round to everything: the registry, save game encryption, system update process, capturing decrypted SSL traffic, etc.
 				</p>
 				
 				<p>
