--- a/dlclose-overflow.html
+++ b/dlclose-overflow.html
@@ -36,7 +36,7 @@
 				
 				<h2>Introduction</h2>
 				<p>
-					I discovered a PS4 kernel vulnerability in a Sony system call a while ago, which I've recently had time exploit, with the help of <a href="http://blog.qwertyoruiop.com/">qwertyoruiop</a>. This vulnerability was patched at a similar time to BadIRET, around firmware 2.00, so it won't give access to any later firmwares; but I wanted to exploit and publish a write-up about it anyway, in the hope that the heap primitives used may be helpful for any future PS4 kernel exploits.
+					I discovered a PS4 kernel vulnerability in a Sony system call a while ago, which I've recently had time to exploit, with the help of <a href="http://blog.qwertyoruiop.com/">qwertyoruiop</a>. This vulnerability was patched at a similar time to BadIRET, around firmware 2.00, so it won't give access to any later firmwares; but I wanted to exploit and publish a write-up about it anyway, in the hope that the heap primitives used may be helpful for any future PS4 kernel exploits.
 				</p>
 				
 				<p>
