--- a/dlclose-overflow.html
+++ b/dlclose-overflow.html
@@ -691,7 +691,7 @@ if(sock != fd) {
 				</p>
 				
 				<p>
-					However, with the recent release of <a href="https://github.com/fail0verflow/ps4-linux">fail0verflow's PS4 Linux port</a>, kernel exploits will soon be useful for end users, as well as for developers.
+					However, with the recent release of <a href="https://github.com/fail0verflow/ps4-linux">fail0verflow's PS4 Linux port</a>, kernel exploits are now much more interesting because they will soon be useful for end users, as well as for developers.
 				</p>
 			</div>
 		</div>
