--- a/ps4.html
+++ b/ps4.html
@@ -116,7 +116,7 @@
 				
 				<h2>What is ROP?</h2>
 				<p>
-					Unlike in primitive devices like the <a href="exploits.html">DS</a>, the PS4 has a kernel which controls the properties of different areas of memory. Pages of memory which are marked as executable cannot be overwritten, and pages of memory which are marked as writable cannot be executed; this is known as <a href="https://en.wikipedia.org/wiki/Data_Execution_Prevention">Data Execution Prevention (DEP)</a>.
+					Unlike in primitive devices like the <a href="DS-exploit-finding.html">DS</a>, the PS4 has a kernel which controls the properties of different areas of memory. Pages of memory which are marked as executable cannot be overwritten, and pages of memory which are marked as writable cannot be executed; this is known as <a href="https://en.wikipedia.org/wiki/Data_Execution_Prevention">Data Execution Prevention (DEP)</a>.
 				</p>
 				
 				<p>
