--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,11 @@
 				</p>
 				
 				<p>
-					Otherwise, feel free to email me at: <a href="mailto:ecturt@gmail.com">ecturt@gmail.com</a>.
+					Otherwise, feel free to send general emails to: <a href="mailto:ecturt@gmail.com">ecturt@gmail.com</a>.
+				</p>
+				
+				<p>
+					If your query regards FreeBSD kernel research, it may be more appropriate for you to use my HardenedBSD email, <a href="cturt@hardenedbsd.org">cturt@hardenedbsd.org</a>.
 				</p>
 			</div>
 		</div>
