--- a/articles.html
+++ b/articles.html
@@ -51,6 +51,7 @@
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206680#c0">kbd race attacks</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206754#c0">Out of bounds negative array index in iicrdwr</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206755#c0">Use of initialised stack variables in tdfx_query_update</a></li>
+					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206761#c0">Kernel stack overflow in sysctl handler for kern.binmisc.add</a></li>
 				</ul>
 				
 				<br>
