fix sce function

--- a/dlclose-overflow.html
+++ b/dlclose-overflow.html
@@ -625,7 +625,7 @@ while(sock != fd) {
 				</p>
 				
 				<p>
-					An easy way to deal with these differences is just to use the Sony wrappers in <code>libkernel</code>, (like <code>sceKernelCreateEqueue</code> and <code>sceKernelAddUserEvent</code>), which construct the <code>kevent</code> struct for you.
+					An easy way to deal with these differences is just to use the Sony wrappers in <code>libkernel</code>, (like <code>sceKernelCreateEqueue</code> and <code>sceKernelAddReadEvent</code>), which construct the <code>kevent</code> struct for you.
 				</p>
 				
 				<br>
