--- a/articles.html
+++ b/articles.html
@@ -42,6 +42,7 @@
 				</p>
 				
 				<ul>
+					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=204097#c0">witness_initialize() does not perform bound checking of witness_count</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206573#c0">Improper userland pointer handling in aacraid</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206585#c2">hpt_set_info buffer overflow</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206648#c0">Fix double strlen in ktrstruct</a> - <a href="https://svnweb.freebsd.org/base?view=revision&revision=294934">Accepted patch</a></li>
