--- a/articles.html
+++ b/articles.html
@@ -56,6 +56,7 @@
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=207302#c0">Iconv uses strlen directly on user supplied memory</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=207626#c0">Memory leak in ctl.c</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=207627#c0">Negative array index in ctl.c</a></li>
+					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=207629#c0">Integer overflow in sysctl_kern_proc_args</a></li>
 				</ul>
 				
 				<br>
