explain it better

--- a/ps4-3.html
+++ b/ps4-3.html
@@ -144,7 +144,7 @@ else if(codeExecutionStage == "4") {
 				</p>
 				
 				<p>
-					You may also be disappointed to hear that very few apps have access to JIT. Sony added their own privilege checks in the kernel; only processes which pass these checks are allowed to use JIT. Unless we find another way of getting code execution, this means that exploits in games and web-apps (like YouTube and Netflix) will be limited to ROP.
+					You may also be disappointed to hear that very few apps have access to JIT. Sony added their own privilege checks in the kernel; only processes which pass these checks are allowed to use JIT. Unless we find another way of getting code execution, this means that exploits in games and web-apps (like YouTube and Netflix which are statically linked to old versions of WebKit) will be limited to ROP.
 				</p>
 				
 				<br>
