--- a/ps4-3.html
+++ b/ps4-3.html
@@ -1089,7 +1089,7 @@ for(offset = mappingAddress; offset &lt; mappingAddress + mappingSize; offset +=
 				</p>
 				
 				<p>
-					The easiest way to get these files into RAM is to copy to copy them to a USB flash drive formatted as FAT32, which can then be read from once you've broken out of sandbox as explained earlier. You could also download them over the network if you prefer.
+					The easiest way to get these files into RAM is to copy to copy them to a USB flash drive formatted as FAT32, which can then be read from once you've broken out of sandbox as explained earlier (<code>/mnt/usb0/</code>). You could also download them over the network if you prefer.
 				</p>
 				
 				<p>
