--- a/ps4-3.html
+++ b/ps4-3.html
@@ -1110,7 +1110,13 @@ kexec_init(NULL, NULL);</code></pre>
 					Once you return to userland, you can load the kernel and initramfs from USB, pass them to <code>kexec</code>, and finally reboot!
 				</p>
 				
-				<pre><code>char *cmdLine = "panic=0 clocksource=tsc radeon.dpm=0 console=tty0 console=ttyS0,115200n8 "
+				<pre><code>FILE *fkernel = fopen("/mnt/usb0/bzImage", "r");
+...
+
+FILE *finitramfs = fopen("/mnt/usb0/initramfs.cpio.gz", "r");
+...
+
+char *cmdLine = "panic=0 clocksource=tsc radeon.dpm=0 console=tty0 console=ttyS0,115200n8 "
 	"console=uart8250,mmio32,0xd0340000 video=HDMI-A-1:1920x1080-24@60 "
 	"consoleblank=0 net.ifnames=0 drm.debug=0";
 
