--- a/dlclose-overflow.html
+++ b/dlclose-overflow.html
@@ -827,7 +827,7 @@ int _main(void) {
 				</p>
 				
 				<p>
-					However, with the recent release of <a href="https://github.com/fail0verflow/ps4-linux">fail0verflow's PS4 Linux port</a>, kernel exploits are now much more interesting because they will soon be useful for end users, as well as for developers.
+					However, with the recent release of <a href="https://github.com/fail0verflow/ps4-linux">fail0verflow's PS4 Linux port</a>, kernel exploits are now much more interesting because they will soon be useful for end users, rather than just developers.
 				</p>
 			</div>
 		</div>
