--- a/dlclose-overflow.html
+++ b/dlclose-overflow.html
@@ -662,7 +662,7 @@ while(sock != fd) {
 				<pre><code>struct knote kn;
 struct filterops fo;
 
-struct knote *overflow = (struct knote *)(mapping + bufferSize);
+struct knote **overflow = (struct knote **)(mapping + bufferSize);
 
 for(i = 0; i &lt; overflowSize / sizeof(struct knote *); i++) {
 	overflow[i] = &amp;kn;
